--- a/src/style.css
+++ b/src/style.css
@@ -150,7 +150,7 @@ li a {
 
 .bigcard {
     width: 1100px;
-    height: 450px;
+    height: 550px;
     flex-shrink: 0;
     border-radius: 50px;
     position: relative;
@@ -306,11 +306,95 @@ li a {
 
 .longcard{
     width: 1920px;
-    height: 109px;
+    height: 120px;
     flex-shrink: 0;
     background: rgba(35, 35, 35, 0.70);
     backdrop-filter: blur(2px);
     position: relative;
-    bottom: 23.8pc;
+    bottom: 21pc;
     right: 30px;
+}
+
+.music-card{
+    position: absolute;
+    top:50%;
+    left: 6%;
+    transform: translate(-50%,-50%);
+    width: 90px;
+    height: 90px;
+    border-radius: 20px;
+    background-image: url(assets/image.png);
+    background-size: cover;
+}
+
+.minitext-footer h1{
+    color: #FFF;
+    font-family: "Inter";
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+.minitext-footer p{
+    color: #ffffffa4;
+    font-family: "Inter";
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 200;
+    line-height: normal;
+    position: relative;
+    bottom: 10px;
+}
+
+.minitext-footer{
+   display: block;
+   justify-content: center;
+   position: relative;
+   left: 12rem;
+   top: 1.6rem;
+}
+
+.long-stick{
+    width: 900px;
+    height: 3px;
+    flex-shrink: 0;
+    border-radius: 20px;
+    background: linear-gradient(270deg, #665F5F 42%, #D9D9D9 100%);
+    position: absolute;
+    top: 85%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+.buttons-musics{
+    display: flex;
+    justify-content: center;
+    position: relative;
+    bottom: 50px;
+}
+
+.pause-button{
+    margin-right: 50px;
+    margin-left: 50px;
+}
+
+.pause-button  {
+    width: 40px;
+    height: 40px;
+}
+
+.left,
+.right{
+    width: 40px;
+    height: 40px;
+    margin-right: 40px;
+    margin-left: 40px;
+}
+
+.repeat,
+.shuffle{
+    width: 17px;
+    height: 17px;
+    margin-top: 10px;
 }
