--- a/src/style.css
+++ b/src/style.css
@@ -404,3 +404,34 @@ li a {
     height: 17px;
     margin-top: 10px;
 }
+
+
+.rightbuttons img{
+    width: 15px;
+    height: 15px;
+    cursor: pointer;
+}
+
+.rightbuttons {
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    position: absolute;
+    top: 48%;
+    left: 90%;
+    transform: translate(-50%,-50%);
+}
+
+.list-music{
+    margin-right: 25px;
+}
+
+.volume-icon{
+    margin-right: 25px;
+}
+
+#volume {
+    height: 5px;
+    background-color: white;
+    margin-right: 25px;
+}
